# TokenSaver

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_SCOPE.md  README.md  SECURITY.md  VERSION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  case_study.yml  integration_request.yml
.github/workflows/: benchmark-comment.yml  ci.yml  growth-metrics.yml  release.yml
docs/: LAUNCH.md  schema-compatibility.md  集成指南.md
docs/governance/: DEVELOPMENT_LOG.md  DEVELOPMENT_PRINCIPLES.md  README.md  TEST_LOG.md
docs/governance/prds/: PRD-20260622-001-development-governance.md  PRD-20260622-002-v0.7-trustworthy-optimization-loop.md  PRD-20260622-003-v0.7-release.md  PRD-20260623-001-onboarding-pipeline-handoff.md  PRD-20260623-002-v0.8-release.md
examples/: agent.py  agent_cases.json  goldfinger_agent.py  run.json
examples/case-studies/: README.md
examples/case-studies/langgraph-repeated-tools/: after.json  before.json
examples/case-studies/openai-context-waste/: after.json  (+1 more)
examples/research_pipeline/: README.md  research_pipeline.py  run_with_tokensaver.sh.example
growth-data/: README.md  experiments.jsonl  github.jsonl
tests/: test_case_studies.py  test_demo.py  test_governance.py  test_install.py  test_integrations.py  test_mcp_server.py  test_onboarding_pipeline_handoff.py  test_panel.py  test_planner.py  test_profile.py  test_runtime.py  test_update.py  test_v06_production_health.py  test_v07_trustworthy_loop.py  test_version.py
tokensaver/: __init__.py  benchmark.py  brief.py  cli.py  context_review.py  demo.py  diagnosis.py  eval.py  install.py  integrations.py  mcp_server.py  models.py  planner.py  profile.py  runtime.py  store.py  task_classifier.py  tokenizer.py  update.py
(+2 files in other folders)
