[project]
name = "tokensaver"
version = "0.1.0"
description = "Open-source runtime ROI diagnosis toolkit for AI Agent applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "TokenSaver Contributors" }
]
keywords = ["llm", "agent", "token", "mcp", "observability", "roi", "runtime"]

[project.scripts]
tokensaver = "tokensaver.cli:main"
tokensaver-mcp = "tokensaver.mcp_server:main"
